--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="회상 - 이전의 일기를 한눈에" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
+    <meta property="og:site_name" content="회상" />
+    <meta
+      property="og:description"
+      content="일기를 써주세요. 어제, 일주일 전, 한 달 전, 일 년 전의 일기를 한눈에 볼 수 있습니다."
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>회상 - 이전의 일기를 한눈에</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
